feat: add HealthController and update security and production configs
- Introduced HealthController to expose /health endpoint.
- Updated security configuration to allow access to /health.
- Tuned Hikari connection pool settings in production config for optimized DB performance.